overlays/uksouth-staging/olympus/policy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policies.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: policies.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policies
                port:
                  number: 80
  tls:
    - hosts:
        - policies.${cluster_name}.${cluster_location}.bink.sh
